# cedar-authzen-agent

./: .dockerignore  Cargo.toml  DESIGN.md  Dockerfile  README.md
demo/keycloak-authzen/: .gitignore  MAPPING.md  README.md  docker-compose.yml
demo/keycloak-authzen/app/: index.html
demo/keycloak-authzen/authenticator/: pom.xml
demo/keycloak-authzen/authenticator/src/main/java/io/permit/cedar/authzen/: AuthZenAuthenticator.java  AuthZenAuthenticatorFactory.java
demo/keycloak-authzen/keycloak/: Dockerfile
demo/keycloak-authzen/realm/: authzen-demo-realm.json
demo/s3-policy-store/: README.md  docker-compose.yml
deploy/: README.md  ecs-task-definition.json
docs/: LOGGING.md
policies/: policies.cedar  schema.cedar.json
src/: authzen.rs  config.rs  convert.rs  handlers.rs  main.rs  state.rs
