[package]
name = "authzen-sidecar"
edition = "2021"
version = "0.1.0"
publish = false
description = "AuthZEN-compliant authorization sidecar (PDP) backed by cedar-local-agent, for Keycloak external-auth enforcement."

[[bin]]
name = "authzen-sidecar"
path = "src/main.rs"

[dependencies]
# Cedar local authorizer (published crate, not a path dependency — see DESIGN.md §3.1)
cedar-local-agent = "3"
cedar-policy = "4.2"

# Async runtime + HTTP server
tokio = { version = "1", features = ["full"] }
axum = "0.7"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors, logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
